--- a/mi.repositorio/index.html
+++ b/mi.repositorio/index.html
@@ -9,7 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Portfolio Macarena Busko</title>
+    <title>Diseño Digital Argentina</title>
+    <!-- DESCRIPCION -->
+    <meta name="description" content="Portfolio Diseño Digital. Contenido para Medios digitales. Multimedial y gráfico. Estático y Motions Graphics. Contenido para redes, Identidad de marca y productos Audiovisuales">
+
+   <!-- KEYWORDS  -->
+    <meta name="keywords"  content="DISEÑO, DIGITAL, COMMUNITY MANAGER, VIDEO, LOGO, MARCA, PROGRAMACION">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/pruebacss.css">
