--- a/mi.repositorio/paginas/creatividad.html
+++ b/mi.repositorio/paginas/creatividad.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>CEATIVIDAD</title>
+  <!-- DESCRIPCION -->
+    <meta name="description" content="Portfolio Diseño Digital. Contenido para Medios digitales. Multimedial y gráfico. Estático y Motions Graphics. Contenido para redes, Identidad de marca y productos Audiovisuales">
+
+   <!-- KEYWORDS  -->
+    <meta name="keywords"  content="DISEÑO, DIGITAL, COMMUNITY MANAGER, VIDEO, LOGO, MARCA, PROGRAMACION">
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
