--- a/mi.repositorio/paginas/creatividad.html
+++ b/mi.repositorio/paginas/creatividad.html
@@ -54,9 +54,9 @@
         		<img src="">
            		<a class="nav-link" href="creatividad.html"><h2 style="color: #A26757;"> CREATIVIDAD </h2></a>
            	</div>
-            <div class="col-lg-4 col-xs-12" style="background-color: #E1C3B8; padding-top: 1%; padding-bottom: 1%;">
+            <div class="col-lg-4 col-xs-12" style="background-color: #A26757; padding-top: 1%; padding-bottom: 1%;">
             <img src="">
-              <a class="nav-link" href="Manager.html"><h2 style="color: #A26757;"> COMMUNITTY </h2></a>
+              <a class="nav-link" href="Manager.html"><h2 style="color: white;"> COMMUNITTY </h2></a>
             </div>   	
         </div>
         <div class="row" style="background-color:#E1C3B8; ">
