--- a/mi.repositorio/index.html
+++ b/mi.repositorio/index.html
@@ -60,7 +60,7 @@
             </div> 
             <div class="col-lg-4 col-xs-12" style="background-color: #3F6E68; padding-top: 1%; padding-bottom: 1%;">
             <img src="">
-              <a class="nav-link" href="Manager.html"><h2 style="color: white;"> COMMUNITTY </h2></a>
+              <a class="nav-link" href="paginas/Manager.html"><h2 style="color: white;"> COMMUNITTY </h2></a>
             </div> 
         </div>
         <div class="row"> 
